--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             <article>
               <h2>contact</h2>
               <p>Mail:k22as004@st.kyusan-u.ac.jp</p>
-              <p><a herf="#">Instagram</a></li></p>
+              <p><a herf="#">Instagram:@egagaga_07</a></li></p>
             </article>
     
         </main>
