--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
-  <title>SampleSite</title>
+  <title>HOME</title>
 </head>
 
 <body>
