--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,9 @@
     
             <article>
               <h2>contact</h2>
-              <p>Mail:k22as004@st.kyusan-u.ac.jp</p>
-              <p><a herf="#">Instagram:@egagaga_07</a></li></p>
+              <p>Mail : k22as004@st.kyusan-u.ac.jp</p>
+              <p><a herf="https://instagram.com/egagaga_07?igshid=MmIzYWVlNDQ5Yg==
+">Instagram : @egagaga_07</a></li></p>
             </article>
     
         </main>
